--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@floating-ui/react-dom": "^2.1.1",
+		"@lottiefiles/dotlottie-react": "^0.15.1",
 		"@mdx-js/loader": "^3.0.1",
 		"@next/mdx": "^14.2.5",
 		"classnames": "^2.5.1",
